--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
   "name": "cypressautomation",
   "version": "1.0.0",
-  "description": "",
+  "description": "Cypress automation framework for https://buggy.justtestit.org/",
   "main": "index.js",
   "scripts": {
     "test": "npx cypress run",
     "cypress:open": "cypress open",
-    "merge":"mochawesome-merge cypress/reports/*.json > cypress/reports/output.json",
-    "generate_mochawesome_report": "marge cypress/reports/output.json --reportDir ./ --inline",
-    "final_report": "npm run merge && npm run generate_mochawesome_report"
+    "merge": "mochawesome-merge cypress/reports/*.json > cypress/reports/output.json",
+    "generate_mochawesome_report": "merge cypress/reports/output.json --reportDir ./ --inline",
+    "final_report": "npm run merge  && npm run generate_mochawesome_report"
   },
   "author": "Santhi",
   "license": "ISC",
   "devDependencies": {
     "cypress": "^6.6.0",
+    "cypress-multi-reporters": "^1.4.0",
     "mochawesome": "^6.2.2",
     "mochawesome-merge": "^4.2.0",
     "mochawesome-report-generator": "^5.2.0"
